nearly finished pet card feature

--- a/styles.css
+++ b/styles.css
@@ -253,11 +253,11 @@ body {
   }
 
   .pet-filter {
-    font-size: 1.375em;
+    font-size: 1.375rem;
   }
 
   .pet-filter button {
-    font-size: 1.375em;
+    font-size: 1.375rem;
   }
 
   .list-of-pets {
